# pyre-review

./: README.md  pyproject.toml  pyre-review
.github/workflows/: ci.yml
pyre_review/: beads.py  cli.py  generate.py  git_ops.py  server.py
pyre_review.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_beads.py  test_cli.py  test_generate.py  test_git_ops.py  test_server.py
